# LISInterpreter

./: CHANGELOG.md  LISInterpreter.cabal  README.md
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Main.hs  MyLib.hs  TestSuite.hs  semantics.hs  state.hs  syntax.hs
