cabal-version:   3.0
name:            LISInterpreter
version:         0.1.0.0
license:         NONE
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Main, Syntax, State, Semantics, TestSuite
    build-depends:    base ^>=4.18.3.0, HUnit
    hs-source-dirs:   src
    default-language: Haskell2010
